Refactor request JSON creation in KeyTransparencyControllerTest